--- a/assets/style.scss
+++ b/assets/style.scss
@@ -15,6 +15,11 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+@font-face {
+   font-family: Jurassic;
+   src: url(/fonts/JurassicPark.ttf);
+}
+
 html {
   font-size: 100%;
   height: 100%;
@@ -28,12 +33,13 @@ body {
   font-weight: 400;
   font-size: 18px;
   height: 100%;
+  text-align: justify;
 }
 
 .container {
   margin: 0 auto;
   max-width: 740px;
-  padding: 0 10px;
+  padding: 0 0px;
   width: 100%;
 }
 
@@ -144,11 +150,11 @@ table tr td :last-child {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 1px solid #ffffff;
   border-radius: 4px;
   box-sizing: border-box;
   font-size: 18px;
-  background-color: #fff3ff;
+  background-color: #e0f1ff;
 }
 
 .share-box {
@@ -218,6 +224,10 @@ img {
   max-width: 100%;
 }
 
+figure {
+  text-align: center;
+}
+
 p > img {
   text-align: center;
   display: block;
@@ -270,7 +280,7 @@ p > img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 2px solid $lightGray;
 
   @include mobile {
     text-align: center;
@@ -279,8 +289,8 @@ p > img {
 
 .site-avatar {
   float: left;
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
   margin-right: 15px;
 
   @include mobile {
@@ -291,8 +301,8 @@ p > img {
 
   img {
     border-radius: 5px;
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
   }
 }
@@ -308,13 +318,14 @@ p > img {
 }
 
 .site-name {
-  margin: 0;
-  color: $darkGray;
+  margin: -30px 0 0 0;
+  padding: none;
+  color: $darkerGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
+  font-family: Jurassic;
+  font-weight: 200;
+  font-size: 100px;
+  letter-spacing: 13px;
   text-align: left;
 
   @include mobile {
@@ -323,9 +334,9 @@ p > img {
 }
 
 .site-description {
-  margin: -5px 0 0 0;
+  margin: -50px 0 20px 10px;
   color: $gray;
-  font-size: 16px;
+  font-size: 22px;
 
   @include mobile {
     margin: 3px 0;
@@ -381,7 +392,7 @@ nav {
     color: $gray;
     font-size: 22px;
     font-style: italic;
-    background-color: #ede1ff;
+    background-color: #3b3b3b;
   }
 
   .you-may-like{
@@ -427,13 +438,13 @@ footer {
 }
 
 body:after {
-    background: linear-gradient(to right, #ffffff   0, #2196F3   33%, #E91E63   66%, #000 100%);
-    width: 100%;
-    height: 5px;
-    top: 0;
-    position: absolute;
-    left: 0;
-    content: '';
+   background: linear-gradient(to right, #ffffff   0, #2196F3   33%, #E91E63   66%, #000 100%);
+   width: 100%;
+   height: 5px;
+   top: 0;
+   position: absolute;
+   left: 0;
+   content: '';
 }
 
 #bar {
@@ -609,7 +620,7 @@ Modules - reusable parts of our design
 }
 
 .yellow.lighten-2 {
-    background-color: #efd3f9 !important;
+    background-color: #194121 !important;
 }
 
 #gh-latest{
