--- a/assets/style.scss
+++ b/assets/style.scss
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  background: #fff;
+  background: #ffffff;
   font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #404040;
   line-height: 1.7;
@@ -54,6 +54,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 
   @include mobile {
+    margin: auto;
     line-height: 1.4;
   }
 }
