fix: *.md changed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,9 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Principal</a>
-              <a href="{{ site.baseurl }}/about">Sobre</a>
-              <a href="{{ site.baseurl }}/archive">Arquivo</a>
-              <a href="{{ site.baseurl }}/search"><i class="fa fa-search"></i></a>
+              <a href="{{ site.baseurl }}/sobre">Sobre</a>
+              <a href="{{ site.baseurl }}/arquivo">Arquivo</a>
+              <a href="{{ site.baseurl }}/buscar"><i class="fa fa-search"></i></a>
             </nav>
           </header>
         </div>
