--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,11 +12,11 @@ layout: default
     {% endif %}
     <div class="post-tags">
       {% if post %}
-        {% assign categories = post.categories %}
+        {% assign categorias = post. %}
       {% else %}
-        {% assign categories = page.categories %}
+        {% assign  = page.categorias %}
       {% endif %}
-      {% for category in categories %}
+      {% for category in categorias %}
         <a href="{{site.baseurl}}/categorias/#{{category|slugize}}">{{category}}</a>
         {% unless forloop.last %}&nbsp;{% endunless %}
       {% endfor %}
